--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
  margin: 0;
  padding: 0;
  box-sizing: border-box;
- font-family: 'Poppins', sans-serif;
+  font-family: "Unbounded", sans-serif;
 }
 * {
     box-sizing: border-box;
@@ -41,26 +41,31 @@ body {
     margin: 0px;
 }
 
+
 nav {
-    border-radius: 5px;
+    /* border-radius: 5px; */
     height: 80px;
-    background: black;
+    background: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 100px 0px 50px; /* Consolidated padding */
-    margin: 10px;
+    padding: 0px 100px 0px 50px; 
+    position: fixed;
+    top: 0;
+    width: 100%;
+
+    /* margin: 10px;
     position: fixed; 
     top: 10px; 
     left: 10px;
-    right: 10px;
+    right: 10px; */
 }
 
 
 
 nav .logo {
     font-size: 33px;
-    color: #fff;
+    color: black;
     font-weight: 600;
 }
 
@@ -75,13 +80,13 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 500;
     letter-spacing: 1px;
     font-weight: 500;
     padding: 8px 10px;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     transition: all 200ms ease-in-out;
 
 }
@@ -93,10 +98,10 @@ nav ul li a.active{
 }
 
 .hero {
-    margin-top: 0px;
-    margin-right: 20px;
-    margin-left: 20px;
-    background-color: greenyellow;
+    border-radius: 20px;
+    margin: 30px;
+    /* margin-right: 20px;
+    margin-left: 20px; */
     height: 800px;
     display: flex;
     justify-content: space-between;
@@ -104,14 +109,17 @@ nav ul li a.active{
 }
 
 .hero-sec {
-    background: white;
+    background: black;
     width: 75%;
+    margin-top: 50px;
+    padding-left: 60px;
+    padding-top: 50px;
 }
 
 .button1 {
     margin-top: 10px;
-    margin-left: 100px;
-    padding-left: 30px;
+    margin-left: 70px;
+    padding-left: 0px;
     padding-right: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -137,16 +145,26 @@ nav ul li a.active{
 .hero-sec p {
     font-size: 70px;
     /* font-weight: bold; */
-    padding-left: 100px;
-    padding-top: 150px;
-    color: black;
+    padding-left: 50px;
+    padding-top: 100px;
+    color: white;
     font-weight: bold;
 
 }
 
+.hero-sec h6 {
+    color: white;
+    font-weight: 300;
+    margin-left: 50px;
+}
+
+/* .hero-sec, .text-para {
+    font-size: 20px;
+} */
+
 .hero-sec p b {
-    background: yellow;
-    color: wheat;
+    background: black;
+    color: white;
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 5px;
@@ -170,23 +188,23 @@ nav ul li a.active{
 /* section2 */
 .section2 {
     display: flex;
-    margin-top: 0px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 0px;
+    margin-left: 30px;
+    margin-right: 30px;
     height: 200px;
     background: black;
 }
 .firstbox {
     display: flex;
-    width: 55%;
-    margin-left: 60px;
-    margin-right: 40px;
-    gap: 160px;
-    
+    justify-content: space-between; 
+    margin-left: auto;
+    margin-right: auto;
+    gap: 100px;
 }
 
+
 .firstbox h1{
-    font-size: 100px;
+    font-size: 70px;
 }
 
 
@@ -212,15 +230,22 @@ nav ul li a.active{
 
 }
 
+.div4 {
+    margin-top: 40px;
+    color: white;
+    text-align: center;
+
+}
+
 .image-div {
-    margin-top: 30px;
-    border-radius: 5px;
+    /* margin-top: 30px; */
+    /* border-radius: 5px; */
     position: relative;
     background-image: linear-gradient(rgba(0, 0, 0, 0.40), rgba(0, 0, 0, 0.90)), url("https://images.unsplash.com/photo-1524069290683-0457abfe42c3?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-size: cover; /* Ensures the background image covers the entire div */
     height: 850px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
     opacity: 1; /* Adjust the opacity value as needed */
     filter: grayscale(20%) contrast(120%) brightness(90%);
 }
@@ -319,15 +344,15 @@ animation: typing 4s steps(18), blink .6s step-end infinite alternate;
 
 
 .accordinsection {
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
     border-radius: 70px;
     display: flex;
-    margin-top: px;
 }
 
 .accordinsection-1 {
-    width: 30%;
+    width: 50%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.30), rgba(0, 0, 0, 0.90)), url('https://images.unsplash.com/photo-1512728881812-4690c2953d4f?q=80&w=3387&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-size: cover; /* Cover the entire container */
     background-position: center; /* Center the background image */
@@ -347,10 +372,11 @@ animation: typing 4s steps(18), blink .6s step-end infinite alternate;
 }
 
 .accordinsection-2 {
-    width: 70%;
+    width: 50%;
 }
 
 .accordion {
+    font-size: 30px;
     height: 100px;
     background-color: black;
     color: white;
@@ -387,8 +413,9 @@ animation: typing 4s steps(18), blink .6s step-end infinite alternate;
 
 }
 
-
-.container-scroll-main {
+/* scroll text */
+<!--
+/* .container-scroll-main {
     margin-left: 20px;
     margin-right: 20px;
     border-radius: 5px;
@@ -409,10 +436,10 @@ animation: typing 4s steps(18), blink .6s step-end infinite alternate;
     will-change: transform;
     backface-visibility: hidden;
     overflow: hidden; /* Ensure content doesn't overflow */
-     z-index: 1;
-  }
+     /* z-index: 1; */
+  } */
   
-  .scrolling-text .scrolling-text-content {
+  /* .scrolling-text .scrolling-text-content {
     position: relative;
     color: white;
     font-size: 100px;
@@ -421,7 +448,7 @@ animation: typing 4s steps(18), blink .6s step-end infinite alternate;
     transition: transform 0.5s cubic-bezier(0.23, 0.36, 0.28, 0.83);
     line-height: 1em;
     margin: 50px 0;
-  } 
+  }  */
 
   /* iframe {
     margin-left: calc(50% - 200px); 
@@ -437,16 +464,280 @@ animation: typing 4s steps(18), blink .6s step-end infinite alternate;
 } */
 
 iframe {
-    margin-left: 350px;
+    margin-left: 50px;
+    margin-right: px;
+    padding-top: 400px;
+    padding-bottom: 40px;
+    border: none;
+}
+
+.youtube{
+    margin-left: 500px;
+    padding-top: 200px;
+    margin-left: 500px;
+    padding-bottom: 200px;
+}
+  .instagram {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.30), rgba(0, 0, 0, 0.90)), url('https://media.licdn.com/dms/image/D5612AQF9AoGwvDUBKg/article-cover_image-shrink_720_1280/0/1701417551500?e=2147483647&v=beta&t=SpRbYmYnGL6Ty7ZvKUM7urRIdY4F6z-Vnor3GerAluA');
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+  }
+
+  /* contact us */
+
+  .contact-us {
+    width: 100%;
+    height: 700px;
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+  
+  .cont-us {
+    margin-top: 70px;
+    text-align: center;
+    margin-bottom: -80px;
+  }
+  .container-contact {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  
+  .contact-box {
+    max-width: 860px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: white;
+    box-shadow: 0px 0px 18px 5px rgba(0, 0, 0, 0.19); /* Corrected typo */
+  }
+  
+  .iframe2 {
+    margin-left: 0px;
     margin-right: auto;
     padding-top: 40px;
     padding-bottom: 40px;
     border: none;
 }
 
-  .instagram {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.30), rgba(0, 0, 0, 0.90)), url('https://media.licdn.com/dms/image/D5612AQF9AoGwvDUBKg/article-cover_image-shrink_720_1280/0/1701417551500?e=2147483647&v=beta&t=SpRbYmYnGL6Ty7ZvKUM7urRIdY4F6z-Vnor3GerAluA');
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
+  .left iframe {
+    padding: 10px 10px;
+    width: 100%;
+    height: 470px;
+    margin-left: none;
+  }
+
+  .right {
+    padding: 25px 40px;
+  }
+  
+  .container-contact h2 {
+    position: relative;
+    padding: 0 0 10px;
+    margin-bottom: 10px;
+  }
+  
+  .container-contact h2:after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%);
+    height: 4px;
+    width: 50px;
+    border-radius: 2px;
+    background-color: orange;
+  }
+  
+  .field {
+    width: 100%;
+    border: 2px solid rgba(0, 0, 0, 0);
+    outline: none;
+    background-color: rgba(230, 230, 230, 0.6);
+    padding: .5rem 1rem;
+    margin-bottom: 22px;
+    transition: .3s;
+  }
+  
+  .field:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+  
+  textarea {
+    min-height: 150px;
+  }
+  
+
+  /* <!-- footer -->  */
+
+  .footer {
+    background-color: black;
+    width: 100%;
+    text-align: left;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 50px;
+    margin-top: 0px;
+  }
+  
+  .footer .footer-left,
+  .footer .footer-center,
+  .footer .footer-right {
+    display: inline-block;
+    vertical-align: top;
+  }
+  
+  
+  /* footer left*/
+  
+  .footer .footer-left {
+    width: 33%;
+    padding-right: 15px;
+  }
+  
+  .footer .about {
+    line-height: 20px;
+    color: green;
+    font-size: 13px;
+    font-weight: normal;
+    margin: 0;
+  }
+  
+  .footer .about span {
+    display: block;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  
+  .footer .icons {
+    margin-top: 25px;
+  }
+  
+  .footer .icons a {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    background-color: #33383b;
+    border-radius: 2px;
+    font-size: 20px;
+    color: #ffffff;
+    text-align: center;
+    line-height: 35px;
+    margin-right: 3px;
+    margin-bottom: 5px;
+  }
+  
+  
+  /* footer center*/
+  
+  .footer .footer-center {
+    width: 30%;
+  }
+  
+  .footer .footer-center i {
+    background-color: #33383b;
+    color: #ffffff;
+    font-size: 25px;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 42px;
+    margin: 10px 15px;
+    vertical-align: middle;
+  }
+  
+  .footer .footer-center i.fa-envelope {
+    font-size: 17px;
+    line-height: 38px;
+  }
+  
+  .footer .footer-center p {
+    display: inline-block;
+    color: #ffffff;
+    vertical-align: middle;
+    margin: 0;
+  }
+  
+  .footer .footer-center p span {
+    display: block;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 2;
+  }
+  
+  .footer .footer-center p a {
+    color: #0099ff;
+    text-decoration: none;
+  }
+  
+  
+  /* footer right*/
+  
+  .footer .footer-right {
+    width: 35%;
+  }
+  
+  .footer h2 {
+    color: #ffffff;
+    font-size: 36px;
+    font-weight: normal;
+    margin: 0;
+  }
+  
+  .footer h2 span {
+    color: #0099ff;
+  }
+  
+  .footer .menu {
+    color: #ffffff;
+    margin: 20px 0 12px;
+    padding: 0;
+  }
+  
+  .footer .menu a {
+    display: inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  .footer .menu a:hover {
+    color: #0099ff;
+  }
+  
+  .footer .name {
+    color: #0099ff;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0;
+  }
+  
+  @media (max-width: 767px) {
+    .footer {
+      font-size: 14px;
+    }
+    .footer .footer-left,
+    .footer .footer-center,
+    .footer .footer-right {
+      display: block;
+      width: 100%;
+      margin-bottom: 40px;
+      text-align: center;
+    }
+    .footer .footer-center i {
+      margin-left: 0;
+    }
   }
