--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1000; 
+    border-bottom: 3px solid black;
 
     /* margin: 10px;
     position: fixed; 
@@ -67,6 +69,8 @@ nav .logo {
     font-size: 33px;
     color: black;
     font-weight: 600;
+    max-width: 100px;
+    max-height: 100px;
 }
 
 nav ul {
@@ -97,14 +101,39 @@ nav ul li a.active{
     color: grey;
 }
 
+
+
+/* marq text */
+
+.container-mar{
+    overflow: hidden;
+    margin-top: 0px;
+    margin-bottom: -50px;
+    margin-left: 30px;
+    margin-right: 30px;   
+    background: yellowgreen;
+    border-bottom: 3px solid white;
+  
+}
+
+.container-mar marquee{
+    overflow: hidden;     
+    font-size: 40px;
+
+  }
+
 .hero {
     border-radius: 20px;
-    margin: 30px;
+    margin-right: 30px;
+    margin-left: 30px;
     /* margin-right: 20px;
     margin-left: 20px; */
     height: 800px;
     display: flex;
     justify-content: space-between;
+    border-right: 3px solid black;
+    border-bottom: 3px solid black;
+
 
 }
 
@@ -333,18 +362,27 @@ animation: typing 4s steps(18), blink .6s step-end infinite alternate;
 
 
 .image-div2-2 {
-    background: white;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.40), rgba(0, 0, 0, 0.90)), url("https://images.pexels.com/photos/267885/pexels-photo-267885.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
     width: 50%;
+    background-size: cover; /* Adjusts the background image to cover the entire element */
+    background-position: center; /* Centers the background image */
+    background-repeat: no-repeat;
 }
 
 
 
 
 
-
+.accord-main {
+    padding-top: 0px;
+    background-color: black;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding-bottom: 150px;
+}
 
 .accordinsection {
-    margin-top: 30px;
+    margin-top: px;
     margin-left: 30px;
     margin-right: 30px;
     border-radius: 70px;
@@ -478,7 +516,7 @@ iframe {
     padding-bottom: 200px;
 }
   .instagram {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.30), rgba(0, 0, 0, 0.90)), url('https://media.licdn.com/dms/image/D5612AQF9AoGwvDUBKg/article-cover_image-shrink_720_1280/0/1701417551500?e=2147483647&v=beta&t=SpRbYmYnGL6Ty7ZvKUM7urRIdY4F6z-Vnor3GerAluA');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.30), rgba(0, 0, 0, 0.90)), url('https://images.pexels.com/photos/1250452/pexels-photo-1250452.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 20px;
